<resources>
    <string name="app_name">水木资本</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="home">首页</string>
    <string name="liveHouse">直播室</string>
    <string name="littleArticle">小文章</string>
    <string name="videoTutorial">视频教程</string>
    <string name="realContest">实盘大赛</string>
    <string name="title_activity_enter">EnterActivity</string>
    <string name="title_activity_live">LiveActivity</string>
    <string name="search_hint">请填写圈号或昵称</string>
    <string name="title_activity_live_list">LiveListActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="cancel">取消</string>
    <string name="yes">确定</string>
    <string name="retry">重试</string>
    <string name="login">登录</string>
    <string name="download_now">立即下载</string>
    <string name="register">注册</string>
    <string name="circle_no_s">圈号：%s</string>
    <string name="shui_bao_s">水宝：%s</string>
    <string name="fans_s">粉丝：%s</string>
    <string name="settings">设置</string>
    <string name="myBox">我的宝盒</string>
    <string name="myBookBox">我订阅的宝盒</string>
    <string name="myCareCircle">我关注的圈子</string>
    <string name="recharge">充值</string>
    <string name="avatar_desc">头像</string>
    <string name="recent_visitor">最近访问</string>
    <string name="recommend_master">推荐圈主</string>
    <string name="fans_number">粉丝数</string>
    <string name="hot_today">今日人气</string>
    <string name="center">个人中心</string>
    <string name="real_contest">实盘大赛</string>
    <string name="stock_school">股市学院</string>
    <string name="warn">温馨提示</string>
    <string name="function_not_open">对不起，此功能暂未开通！敬请期待！</string>
    <string name="title_activity_setting">@string/settings</string>
    <string name="yjy">易交易（www.yjy998.com）是当下最受欢迎的互联网融资平台，平台以先进的互联网技术为支撑，以雄厚的资金实力为后盾，为资金短缺的操盘手提供科学倍数的资金支持，以及低成本、快速度、小风险、高收益的投资通道。易交易致力于打造为最具行业品牌影响力的融资平台。</string>
    <string name="back">返回</string>
    <string name="about_us">关于我们</string>
    <string name="suggestion">意见反馈</string>
    <string name="cache_clear">清理缓存</string>
    <string name="logout">退出当前账号</string>
    <string name="version_s">当前版本：%s</string>
    <string name="hint_user_name">请输入用户名</string>
    <string name="hint_psw">请输入密码</string>
    <string name="save_psw">记住密码？</string>
    <string name="all_live">全部直播</string>
    <string name="my_attention">我的关注</string>
    <string name="question_fedback">问题帮助与反馈</string>
    <string name="title_activity_full_sceen_vedio">FullSceenVedio</string>
    <string name="test_circle_name">证券娱乐圈</string>
    <string name="test_subject">2015 股市再上6000点</string>
    <string name="test_master_name">大时代</string>
    <string name="popularity_s">总人气：%s</string>
    <string name="live_video">直播录像</string>
    <string name="my_box">我的宝盒</string>
    <string name="my_book">我的订阅</string>
    <string name="http_request_fail">网络请求错误</string>
    <string name="tips">提示</string>
    <string name="cache_clear_ok">缓存清理完毕</string>
    <string name="confirm_logout">确定退出？</string>
    <string name="search_history">搜索历史</string>
    <string name="clear_search_history">清空搜索历史</string>
    <string name="title_activity_a">A</string>
    <string name="title_activity_box">我订阅的宝盒</string>
    <string name="live_not_exist">直播不存在</string>
    <string name="title_activity_vod">VodActivity</string>
    <string name="title_activity_box_detail">宝盒详情</string>
    <string name="connecting">连接中…</string>
    <string name="open_living">正在打开直播…</string>
    <string name="open_vod">正在打开录像…</string>
    <string name="leaving">正在离开房间…</string>
    <string name="data_load_done">数据加载完毕</string>
    <string name="title_activity_box_info">宝盒详情</string>
    <string name="box_detail_get_failed">查询宝盒详情失败</string>
    <string name="title_activity_text_box">宝盒详情</string>
    <string name="circleMaster">圈主</string>
    <string name="manager">管理员</string>
    <string name="title_activity_suggestion">意见反馈</string>
    <string name="send">发送</string>
    <string name="title_activity_about">关于我们</string>
    <string name="about_desc">水木资本(www.svmuu.com)是公司全力打造的财经类互动社区，平台整合业界一线专家资源，以圈子的方式分享投资智慧，投资者通过分享专家投资经验、跟踪专家实战操作，实现自身投资技术的提高和收益的增值。水木资本以其开放、分享、专业、互动的服务理念，即将打造成为中国最具影响力的财经互动平台。</string>
    <string name="tel_desc">联系电话：025&#8211;86657191 \n客服电话：400&#8211;828&#8211;1911</string>
    <string name="live">直播</string>
    <string name="live_null">未直播</string>
    <string name="get_live_info_failed">获取直播信息失败</string>
    <string name="title_activity_http_settings">HttpSettings</string>
    <string name="getLiveInfo">获取直播信息…</string>
    <string name="search">搜索</string>
    <string name="empty_book">您暂无订阅！</string>
    <string name="fans_whisper">本条信息为铁粉悄悄话，加入铁粉后即可查看！</string>
    <string name="search_not_found">没有查找到%s</string>
    <string name="system_notice">系统公告</string>
</resources>
