<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="@dimen/menuWidth"
    android:layout_height="match_parent"
    android:background="#141414"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dimen_25px"
        android:paddingLeft="@dimen/dimen_36px"
        android:paddingRight="@dimen/dimen_36px"
        android:paddingTop="@dimen/dimen_45px">

        <ImageView
            android:id="@+id/avatarImage"
            android:layout_width="@dimen/avatarSize"
            android:layout_height="@dimen/avatarSize"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/avatar_desc"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20px"
            android:layout_marginStart="@dimen/dimen_20px">

            <TextView
                android:id="@+id/phoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_24px"/>

            <TextView
                android:id="@+id/tv_circleNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneText"
                android:layout_marginTop="4dp"
                android:text="@string/circle_no_s"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_22px"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Shuibao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/shui_bao_s"
            android:textColor="@color/grayA"
            android:textSize="@dimen/text_22px"/>


        <TextView
            android:id="@+id/tv_fans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/xin_guanzhu"
            android:gravity="start|center_vertical"
            android:text="@string/fans_s"
            android:textColor="@color/grayA"
            android:textSize="@dimen/text_22px"/>
    </LinearLayout>

    <View
        style="@style/horizontalDivider.menuStyle"
        android:layout_marginTop="@dimen/dimen_50px"/>

    <LinearLayout
        android:id="@+id/recharge"
        style="@style/MenuClickItem">

        <ImageView

            style="@style/MenuIconStyle"
            android:src="@drawable/leftbar_recharge_selector"
            android:contentDescription="@string/recharge"/>

        <TextView
            style="@style/MenuTextStyle"
            android:text="@string/recharge"/>
    </LinearLayout>

    <View style="@style/horizontalDivider.menuStyle"/>

    <LinearLayout
        android:id="@+id/myCircle"
        style="@style/MenuClickItem">

        <ImageView

            style="@style/MenuIconStyle"
            android:src="@drawable/leftbar_guanzhu_selector"
            android:contentDescription="@string/myCareCircle"/>

        <TextView
            style="@style/MenuTextStyle"
            android:text="@string/myCareCircle"/>
    </LinearLayout>

    <View style="@style/horizontalDivider.menuStyle"/>

    <LinearLayout
        android:id="@+id/myBox"
        style="@style/MenuClickItem">

        <ImageView
            style="@style/MenuIconStyle"
            android:src="@drawable/leftbar_box_selector"
            android:contentDescription="@string/myBox"/>

        <TextView
            style="@style/MenuTextStyle"
            android:text="@string/myBox"/>
    </LinearLayout>

    <View style="@style/horizontalDivider.menuStyle"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_15px"
        android:layout_marginLeft="@dimen/dimen_36px"
        android:layout_marginRight="@dimen/dimen_36px"
        android:drawableLeft="@drawable/setting"
        android:gravity="center_vertical"
        android:text="@string/settings"
        android:textColor="@color/grayA"
        android:textSize="@dimen/text_20px"/>
</LinearLayout>
