<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.svmuu.ui.activity.live.LiveActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleHeight"
        android:background="@drawable/windowTitleBackground"
        >

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/red_back"
            android:drawablePadding="-8dp"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/titleTextSize"
            />

        <TextView
            android:id="@+id/circleName"
            android:layout_toRightOf="@id/back"
            android:layout_toLeftOf="@+id/changeLiveType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:gravity="center"
            android:text="@string/test_circle_name"
            android:textColor="@color/white"
            android:textSize="@dimen/titleTextSize"/>

        <LinearLayout
            android:id="@+id/changeLiveType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dimen_15px"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/menuIcon"
                android:layout_width="@dimen/titleHeight"
                android:layout_height="@dimen/titleHeight"
                android:scaleType="centerInside"
                android:src="@drawable/mode_video_normal"/>

            <ImageView
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:padding="@dimen/dimen_10px"
        android:drawablePadding="@dimen/dimen_15px"
        android:drawableLeft="@drawable/text_live"
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:id="@+id/textLive"
        android:text="超级直播咻咻咻咻"
        android:visibility="gone"
        android:textColor="@color/liveHouseTabRed"/>
    <FrameLayout
        android:visibility="visible"
        android:id="@+id/videoLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_300px">

        <com.gensee.view.GSVideoView
            android:id="@+id/gsView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_300px"/>

        <LinearLayout
            android:id="@+id/controlLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#8000"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_15px">

            <TextView
                android:id="@+id/subject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/test_subject"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/fullScreen"
                android:layout_width="@dimen/dimen_45px"
                android:layout_height="@dimen/dimen_45px"
                android:src="@drawable/full_screen"/>
        </LinearLayout>
        <ImageView
            android:visibility="gone"
            android:id="@+id/no_live"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/no_live"
            android:scaleType="centerCrop"/>
    </FrameLayout>
    <View style="@style/horizontalDivider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/liveHouseHorizontalPadding"
        android:background="@drawable/white_corner_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatarImage"
            android:layout_width="@dimen/avatarSize"
            android:layout_height="@dimen/avatarSize"
            android:src="@drawable/ic_launcher"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/masterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_master_name"
                android:textColor="@color/blackA"/>

            <TextView
                android:id="@+id/fansNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fans_s"
                android:textColor="@color/grayA"/>

            <TextView
                android:id="@+id/popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popularity_s"
                android:textColor="@color/grayA"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/concern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/care_normal"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/liveHouseHorizontalPadding"
        android:layout_marginRight="@dimen/liveHouseHorizontalPadding"
        android:background="@drawable/red_corner_frame"
        android:divider="@drawable/ic_launcher"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/liveRoom"
            style="@style/liveTabButtonStyle"
            android:text="@string/liveHouse"/>

        <View
            style="@style/verticalDivider"
            android:layout_width="2dp"
            android:background="@color/liveHouseTabRed"/>

        <RadioButton
            android:id="@+id/video"
            style="@style/liveTabButtonStyle"
            android:text="@string/live_video"/>

        <View
            style="@style/verticalDivider"
            android:layout_width="2dp"
            android:background="@color/liveHouseTabRed"/>

        <RadioButton
            android:id="@+id/box"
            style="@style/liveTabButtonStyle"
            android:text="@string/my_box"/>

    </RadioGroup>

    <FrameLayout
        android:layout_marginLeft="@dimen/liveHouseHorizontalPadding"
        android:layout_marginRight="@dimen/liveHouseHorizontalPadding"
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


</LinearLayout>
